# CompanyDB

./: .gitignore  CMakeLists.txt  README.md  instruments.cpp  instruments.h  main.cpp  main.qml  qml.qrc  servercontroller.cpp  servercontroller.h
DB/: SuperDataBaseRota
DB/Tables/: addirionalinfo.cpp  addirionalinfo.h  address.cpp  address.h  document.cpp  document.h  documenttype.cpp  documenttype.h  education.cpp  education.h  educationtype.cpp  educationtype.h  human.cpp  human.h  humanhasaddress.cpp  humanhasaddress.h  practice.cpp  practice.h  rank.cpp  rank.h  relatives.cpp  relatives.h  rota.cpp  rota.h  scientificwork.cpp  scientificwork.h  scientificworktype.cpp  scientificworktype.h  squad.cpp  squad.h  summon.cpp  summon.h  workplace.cpp  workplace.h  workplacetype.cpp  workplacetype.h
Documents/Excel/: excelbase.cpp  excelbase.h  excelfsb.cpp  excelfsb.h  excelhrdepartment.cpp  excelhrdepartment.h  excelrotapassport.cpp  excelrotapassport.h
Frontend/: AppHeader.qml  NavButton.qml  NavigationDrawer.qml  Separator.qml  Structure.qml  Table.qml  personnel.qml  qmldir
Frontend/NavigationPanel/: NavButton.qml  NavigationDrawer.qml
